[workspace]
resolver = "2"
members = [
    "utils",
    "recipes",
    "ingredients/setup_mint",
    "ingredients/setup_participants",
    "ingredients/setup_token_account",
    "ingredients/mint_tokens",
    "ingredients/deposit_tokens",
    "ingredients/apply_pending_balance",
    "ingredients/transfer",
    "ingredients/withdraw_tokens"
]

# Workspace-wide dependencies can be specified here if needed
[workspace.dependencies]
