[workspace]
resolver = "2"
members = [
    "utils",
    "recipes",
    "ingredients/setup_mint",
    "ingredients/setup_participants",
    "ingredients/setup_token_account",
    "ingredients/mint_tokens",
    "ingredients/deposit_tokens",
    "ingredients/apply_pending_balance",
    "ingredients/transfer",
    "ingredients/withdraw_tokens"
, "ingredients/global_auditor_assert", "ingredients/setup_mint_confidential"]

[workspace.dependencies]
# Solana dependencies
solana-sdk = "2.1.9"
solana-client = "2.1.9"
solana-transaction-status-client-types = "2.1.9"
solana-zk-sdk = "2.1.9"

# SPL dependencies
spl-token-2022 = { git = "https://github.com/solana-labs/solana-program-library.git", rev = "224a96b164357a221c7f7dae5e348f9c0f7a73da" }
spl-token-client = { git = "https://github.com/solana-labs/solana-program-library.git", rev = "224a96b164357a221c7f7dae5e348f9c0f7a73da" }
spl-associated-token-account = { git = "https://github.com/solana-labs/solana-program-library.git", rev = "224a96b164357a221c7f7dae5e348f9c0f7a73da" }
spl-token-confidential-transfer-proof-generation = { git = "https://github.com/solana-labs/solana-program-library.git", rev = "224a96b164357a221c7f7dae5e348f9c0f7a73da" }
spl-token-confidential-transfer-proof-extraction = { git = "https://github.com/solana-labs/solana-program-library.git", rev = "224a96b164357a221c7f7dae5e348f9c0f7a73da" }

# Other dependencies
tk-rs = { path = "/Users/kbonilla/Projects/Solana/cookbook/tk-rs" }
tokio = { version = "1.42.0", features = ["full"] }
serde = "1.0.215"
serde_json = "1.0.1"
bs58 = "0.5.1"
dotenvy = "0.15.7"
google-cloud-kms = "0.6.0"
base64 = "0.22.1"