[package]
name = "utils"
version = "0.1.0"
edition = "2021"

[dependencies]
solana-sdk = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
solana-zk-sdk = { workspace = true }
solana-client = { workspace = true }
dotenvy = { workspace = true }
tk-rs = { workspace = true }
tokio = { workspace = true }
google-cloud-kms = { workspace = true }
base64 = { workspace = true }
bs58 = { workspace = true }
jito-sdk-rust = { workspace = true }
reqwest = { version = "0.12.11", features = ["json"] }