[package]
name = "global_auditor_assert"
version = "0.1.0"
edition = "2021"

[dependencies]
solana-sdk = "2.1.2"
solana-client = "2.1.2"
solana-transaction-status-client-types = "2.1.2"
spl-token-2022 = { git = "https://github.com/solana-labs/solana-program-library" }
spl-token-confidential-transfer-proof-generation = { git = "https://github.com/solana-labs/solana-program-library" }

keypair_utils = { path = "../../utils" }
bs58 = "0.5.1"
