[package]
name = "mint_tokens"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
keypair_utils = { path = "../../utils" }
solana-client = "2.1.2"
solana-sdk = "2.1.2"
spl-token-2022 = { git = "https://github.com/solana-labs/solana-program-library" }
spl-token-client = { git = "https://github.com/solana-labs/solana-program-library" }
