[package]
name = "mint_tokens"
version = "0.1.0"
edition = "2021"

[dependencies]
keypair_utils = { path = "../../utils" }
solana-sdk = "2.1.2"
spl-token-2022 = { git = "https://github.com/solana-labs/solana-program-library" }
spl-associated-token-account = { git = "https://github.com/solana-labs/solana-program-library" }
