[package]
name = "setup_token_account"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { workspace = true }
keypair_utils = { path = "../../utils" }
spl-token-2022 = { workspace = true }
spl-associated-token-account = { workspace = true }
solana-sdk = { workspace = true }
spl-token-confidential-transfer-proof-extraction = { workspace = true }
