[package]
name = "transfer"
version = "0.1.0"
edition = "2021"

[dependencies]
solana-sdk = { workspace = true }
spl-token-client = { workspace = true }
spl-token-2022 = { workspace = true }
spl-associated-token-account = { workspace = true }
spl-token-confidential-transfer-proof-generation = { workspace = true }
spl-token-confidential-transfer-proof-extraction = { workspace = true }
solana-zk-sdk = { workspace = true }

bs58 = { workspace = true }
jito-sdk-rust = { workspace = true }
keypair_utils = { path = "../../utils" }
bytemuck = "1.20.0"
bincode = "1.3.3"
serde_json = "1.0"
