[package]
name = "withdraw_tokens"
version = "0.1.0"
edition = "2021"

[dependencies]
solana-sdk = "2.1.2"
spl-token-client = { git = "https://github.com/solana-labs/solana-program-library" }
spl-token-2022 = { git = "https://github.com/solana-labs/solana-program-library" }
spl-associated-token-account = { git = "https://github.com/solana-labs/solana-program-library" }
spl-token-confidential-transfer-proof-generation = { git = "https://github.com/solana-labs/solana-program-library" }

keypair_utils = { path = "../../utils" }
