[package]
name = "withdraw_tokens"
version = "0.1.0"
edition = "2021"

[dependencies]
solana-sdk = { workspace = true }
spl-token-client = { workspace = true }
spl-token-2022 = { workspace = true }
spl-associated-token-account = { workspace = true }
spl-token-confidential-transfer-proof-generation = { workspace = true }

utils = { path = "../../utils" }
